--- a/main.html
+++ b/main.html
@@ -3,13 +3,40 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <!-- the entire body must be written by student -->
+    <table>
+        <thead>
+            <th>Roll numbers</th>
+            <th>Names</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>Siya</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Riya</td>
+            </tr>
+        </tbody>
+    </table>
+    <h1>List of medias</h1>
+
+    <ol>
+        <li><img src="https://picsum.photos/id/123/200/300" alt="photo"> </li>
+        <li><video width="400px" height="200px" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</video></li>
+        <li><audio controls autoplay>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		</audio></li>
+    </ol>
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
