--- a/main.html
+++ b/main.html
@@ -22,6 +22,10 @@
                 <td>102</td>
                 <td>Riya</td>
             </tr>
+            <tr>
+                <td>103</td>
+                <td>Meena</td>
+            </tr>
         </tbody>
     </table>
     <h1>List of medias</h1>
@@ -31,7 +35,7 @@
         <li><video width="400px" height="200px" controls>
 			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 		</video></li>
-        <li><audio controls autoplay>
+        <li><audio controls>
 			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 		</audio></li>
     </ol>
